--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,7 @@ board = agrv2k_407
 #   * agrv_ucos:     uC/OS, an open source real-time OS
 # Multiple frameworks can be specified, like:
 #   framework = agrv_sdk, agrv_tinyusb
-framework = agrv_sdk
+framework = agrv_sdk, agrv_freertos
 
 # Program name. This determines the .elf and .bin file names.
 program = agm_example
